# notifyo

./: .gitignore  Makefile  Readme.md  docker-compose.yml
docs/: mkdocs.yml
docs/docs/: index.md  installation.md
internal/: .eslintrc.js  Dockerfile  app.js  package.json  pnpm-lock.yaml  server.js
internal/providers/db/: db.errors.ts
internal/src/: app.module.ts  main.ts
internal/src/firebase/: firebase.controller.ts  firebase.module.ts  firebase.service.ts
internal/src/firebase/dto/: notification.dto.ts
internal/src/mail/: mail.controller.ts  mail.module.ts  mail.service.ts
internal/src/templates/: template.controller.ts  template.module.ts  template.service.ts
internal/src/templates/schemas/: template.schema.ts
notifyo/: Makefile  pyproject.toml
notifyo/notifyo/: db.sqlite3  manage.py
notifyo/notifyo/notifyo/: asgi.py  settings.py  urls.py  wsgi.py
