[tool.poetry]
name = "notifyo"
version = "0.1.0"
description = ""
authors = ["Ajay Kumar Singh <ajaykumar.kumar900@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.3"
django-types = "^0.19.1"
django-stubs-ext = "^5.1.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
